--- a/iros.tex
+++ b/iros.tex
@@ -238,9 +238,9 @@ Does she have any visible reaction before falling?  & She presents dynamic alter
 \hline
 Is the patient gait normal ?  &  No, the patient presents ataxic gait, likely triggered by slow reaction to perform lower-limb balance correction. \\
 \hline
-Is there any behavioural pattern linked to falling events ? &  Yes, cognitive workload.  Dual tasks situations, when the patient needs to perform something extra while walking. \\
+Is there any behavioral pattern linked to falling events ? &  Yes, cognitive workload.  Dual tasks situations, when the patient needs to perform something extra while walking. \\
 \hline
-Describe current treatment. & The patient is currently working on rehabilitation exercises to retrain her Vestibulo-Ocular Reflex (VOR), to improve her static and dynamic balance, and improve her locomotor automatism.  She is improving on a montly basis, but still she has not reached the level to walk autonomy without any aid. \\
+Describe current treatment. & The patient is currently working on rehabilitation exercises to retrain her Vestibulo-Ocular Reflex (VOR), to improve her static and dynamic balance, and improve her locomotor automatism.  She is improving on a monthly basis, but still she has not reached the level to walk autonomy without any aid. \\
 \hline
 \end{tabular}
 \vspace{2pt}
@@ -266,11 +266,11 @@ Tables ~\ref{tab:patientsurvey} and \ref{tab:caregiverssurvey}.  Based on the cl
 \subsection{Robotic Device Vest}
 \label{sec:vest}
 
-The vest system prototype is based on Internet of Robot Thing (IoRT) technology~\cite{Simoens.etal2018,Domingo.etal2012}. The controller is an Arduino UNO (Arduino LLC, Italy) board coupled with ESP8266 shield (WeMos, United Kingdom).  The system is powered by a commercial power bank with Li-Po 18650 cells (Ipower, United States). It also contains an Inertial Measurement Unit (IMU) MPU 6050 (OEM ITG/MPU6050) and a FA-12350 DC motor scavenged from old compact discs which provide the vibrotactile feedback.  The IMU provides accelerometer and gyroscope data to get a 3-dimensional angular acceleration vector and a linear acceleration vector. Pitch, Roll and Yaw angles are calculated from a set of transforming equations and processed with a complementary filter which relies 80\% in gyroscope data and 20\% in accelerometer data~\cite{Fetick.2022}. These values are transmitted by telemetry in real-time as UDP packets for off-board register, processing and further analysis. Data recovered by the device is sampled at 1000 Hz. The smart-vest prototype can be seen in Figure~\ref{fig:smart-vest}.  It is based on a safety vest, complemented with velcro pockets. 
+The vest system prototype is based on Internet of Robot Thing (IoRT) technology~\cite{Simoens.etal2018,Domingo.etal2012}. The controller is an Arduino UNO (Arduino LLC, Italy) board coupled with ESP8266 shield (WeMos, United Kingdom).  The system is powered by a commercial power bank with Li-Po 18650 cells (Ipower, United States). It also contains an Inertial Measurement Unit (IMU) MPU 6050 (OEM ITG/MPU6050) and a FA-12350 DC motor scavenged from old compact discs which provide the vibrotactile feedback.  The IMU provides accelerometer and gyroscope data to get a 3-dimensional angular acceleration vector and a linear acceleration vector. Pitch, Roll and Yaw angles are calculated from a set of transforming equations and processed with a complementary filter which relies $0.98$ in gyroscope data and $0.02$ in accelerometer data~\cite{Fetick.2022}. These values are transmitted by telemetry in real-time as UDP packets for off-board register, processing and further analysis. Data recovered by the device is sampled at 100 Hz. The smart-vest prototype can be seen in Figure~\ref{fig:smart-vest}.  It is based on a safety vest, complemented with Velcro pockets. 
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=8cm]{equilivest.jpg}
+\includegraphics[width=8cm]{equilivest.png}
 \caption{Front and back view of the Equilivest prototype.  The vest is based on a safety vest, with additional velcro pockets.  The battery is located on the back, while the vibrotactile motor is located on the belly~\cite{Brandebusemeyer.etal2021}.  The IMU sensor is pressed against the chest by the use of a flexible elastic band. }
 \label{fig:smart-vest}
 \end{figure}
@@ -314,7 +314,7 @@ This experiment involves the coupling of the other two.  Five participants are i
 
 \section*{Results and Discussion}
 
-Preliminary results show that for the (1) experiment, the pitch,roll, yaw angles can be used to determine a breakpoint where the fall is inevitable (black vertical line, marked as 1).   Results from experiment number (2), show that the gait cycle are clearly visible from the raw and pitch data.
+Preliminary results show that for the (1) experiment (Figure \ref{fig:vestibular}), the pitch,roll, yaw angles can be used to determine a breakpoint where the fall is inevitable (black vertical line, marked as 1).   Results from experiment number (2) in Figure \ref{fig:gait} show that the gait cycle are clearly visible from raw acceleration data.
 
 \begin{figure}[h!]
 \centering
@@ -327,7 +327,7 @@ Preliminary results show that for the (1) experiment, the pitch,roll, yaw angles
 \begin{figure}[h!]
 \centering
 \includegraphics[width=8cm]{gait.png}
-\caption{Angular acceleration for the X and Y axis showing 7 steps of the 10MWT assessment.   }
+\caption{Angular acceleration for the X and Y axis showing 7 steps of the 10MWT assessment.  Time is in milliseconds. }
 \label{fig:gait}
 \end{figure}
 
@@ -343,7 +343,7 @@ The information provided from all the experiments allow us to implement three di
 
 The second strategy is the implementation of \textbf{Gait Pacemaker}.  The obtained data from the analysis of the ataxic gait is used to implement a podometer.  It has been showed that gait synchronization with music increase gait performance~\cite{Roerdink.etal2007} and synchronized gait trainer achieved positive results on patient~\cite{Blicher.etal2009}.  Hence, the aim of this stimulation approach is to keep the patient as close as possible to a normal and safe gait.
 
-The final stimulation scheme deals with the Bradykinesia condition, and aims to have a \textbf{Risk-Predictor}~\cite{Rahman.etal2022,Ali.etal2022}.  The IMU data  represents a multichannel time series.  Hence, it can be used to predict a risk of falling, ahead of its occurrence, by implement a machine-learning predictor based on the analysis of the time-series data.  The rationale is to counter the slowness of the response by predicting the falling situation ahead of its occurrence and providing the VF stimulation to force a change in the risky gait pattern.
+The final stimulation scheme deals with the Bradykinesia condition, and aims to have a \textbf{Risk-Predictor}~\cite{Rahman.etal2022,Ali.etal2022}.  The IMU data  represents a multichannel time series.  Hence, it can be used to predict a risk of falling, ahead of its occurrence, by building a machine-learning predictor based on the analysis of the time-series data.  The rationale is to counter the slowness of the response by predicting the falling situation ahead of its occurrence and providing the VF stimulation to force a change in the risky gait pattern.
 
 %Hence, the signals  IMU can be feed back to the patient by vibrotactile stimulation on their belly. This will be impemented, first, in a binary way.  The hypothesis is that if there is a vestibular problem that forbids the patient to receive or evaluate the vestibular information appropriately, this external signal can be available for the patient to integrate it into the dynamic balance system.
 
