--- a/iros.tex
+++ b/iros.tex
@@ -16,13 +16,13 @@
 
 \author{%
 Franco Paviotti$^{1}$, Esteban Buniak$^{2}$, Rodrigo Ramele$^{3}$, Orestes Freixes$^{4}$ and Juan Miguel Santos$^{5}$% <-this % stops a space
-\thanks{$^{1}$F. Paviotti is with Bioengineering, Instituto Tecnológico de Buenos Aires
+\thanks{$^{1}$F. Paviotti is with Bioengineering, Instituto Tecnológico de Buenos Aires (ITBA)
                     Buenos Aires, Argentina
         {\tt\small fpaviotti@itba.edu.ar}}%
-\thanks{$^{2}$E.Buniak is with Ingeniería en Informática, Instituto Tecnológico de Buenos Aires
+\thanks{$^{2}$E.Buniak is with Ingeniería en Informática, Instituto Tecnológico de Buenos Aires (ITBA)
                     Buenos Aires, Argentina
         {\tt\small ebuniak@itba.edu.ar}}%
-\thanks{$^{3}$R.Ramele is with Ingeniería en Informática, Instituto Tecnológico de Buenos Aires
+\thanks{$^{3}$R.Ramele is with Ingeniería en Informática, Instituto Tecnológico de Buenos Aires (ITBA)
                     Buenos Aires, Argentina
         {\tt\small rramele@itba.edu.ar}}%
 \thanks{$^{4}$O. Freixes is with the CINER Centro Integral de Neurorehabilitación,
@@ -72,7 +72,7 @@ Franco Paviotti$^{1}$, Esteban Buniak$^{2}$, Rodrigo Ramele$^{3}$, Orestes Freix
 %\end{abstract}
 
 \begin{IEEEkeywords}
-Stroke, Balance, Rehabilitation, Biofeedback, Vibrotactile
+Stroke, Dynamic Balance, Neurorehabilitation, Biofeedback, Vibrotactile
 \end{IEEEkeywords}
 
 \section{Introduction}
@@ -102,7 +102,7 @@ This work presents the development of a device which is grounded on this idea, a
 \subsection{Patient Case Study}
 \label{sec:case-study}
 
-Patient is a 31 years old female, without any history of chronic ailment, who suffered an acute brainstem stroke after giving birth.  The stroke was on posterior fossa subarachnoid due to a brain artereovenous malformation (AVM), which could be linked to pregnancy or puerperium~\cite{Porras.etal2017}.  Patient was in coma for around 2 months, and after that unable to walk, move, talk or swallow.  After two years of intensive rehabilitation, the patient managed to recover significantly, including from dysphagia, which was very important in order to remove the feeding tube allowing her to start speech recovering.  
+Patient is a 31 years-old female, without any history of chronic ailment, who suffered an acute brainstem stroke after giving birth.  The stroke was on posterior fossa subarachnoid due to a brain artereovenous malformation (AVM), which could be linked to pregnancy or puerperium~\cite{Porras.etal2017}.  Patient was in coma for around 2 months, and after that unable to walk, move, talk or swallow.  After two years of intensive rehabilitation, the patient managed to recover significantly, including from dysphagia, which was very important in order to remove the feeding tube allowing her to start speech recovering.  
 
 After 24 months since event, the patient, was discharged from hospital and maintained a 3 times per week rehabilitation treatment, focusing on a remaining affection related to dynamic balance problems while walking.  The patient achieved satisfactory index scores in static balance tests and is able to perform static hip-balance and ankle-balance.  She has recovered muscle force in her legs and can perform lower-limb exercises.  Her vision is normal.   
 
@@ -312,7 +312,7 @@ This experiment involves the coupling of the other two.  Five participants are i
 
 \section*{Results and Discussion}
 
-Preliminary results show that for the (1) experiment, on Figure \ref{fig:vestibular}), the value of pitch angles can be used to determine a breakpoint where the fall is inevitable (black vertical line, marked as 1*).   Results from experiment number (2) in Figure \ref{fig:gait} show that the gait cycle is clearly visible from raw acceleration data.
+Preliminary results show that for the first (1) experiment, on Figure \ref{fig:vestibular}, the pitch angle can be used to determine a breakpoint where the fall is inevitable (black vertical line, marked as 1*).   On the other hand, results from experiment number (2) in Figure \ref{fig:gait} show that the gait cycle is clearly visible from raw acceleration data.
 
 \begin{figure}[h!]
 \centering
